; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_user_ldt.c_user_ldt_set_action.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_user_ldt.c_user_ldt_set_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @user_ldt_set_action(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = ptrtoint i8* %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 (...) @current_task()
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = call i32 (...) @current_thread()
  %11 = call i32 @user_ldt_set(i32 %10)
  br label %12

12:                                               ; preds = %9, %1
  ret void
}

declare dso_local i64 @current_task(...) #1

declare dso_local i32 @user_ldt_set(i32) #1

declare dso_local i32 @current_thread(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
